--------------
Version 0.67b:
--------------

  - Several more typos fixed, the project is now cartified 100% typo-free.
    Thanks to Thomas Jarosch.

--------------
Version 0.66b:
--------------

  - Fix for a very obscure issue with build systems that use gcc as an assembler
    for hand-written .s files, confusing afl-as. Affected nss. Reported by
    Hanno Boeck.

  - Fix for a bug when cleaning up synchronized fuzzer output dirs. Reported by
    Thomas Jarosch.

--------------
Version 0.65b:
--------------

  - Fix for shell printf escape codes in Makefile. Reported by Jakub Wilk.

  - A bit more color to fuzzer_stats, short documentation of the file format,
    and several other stats-related improvements.

--------------
Version 0.64b:
--------------

  - Enable GCC support on MacOS X.

--------------
Version 0.63b:
--------------

  - New, simplified way to pass data in files (@@). See README.

  - Final fixes for 64-bit MacOS X, working around a crashing bug in their
    linker (umpf) and several other things. It's alive!

  - A minor workaround for a bug in 64-bit FreeBSD (clang -m32 -g doesn't work
    on that platform, but clang -m32 does, so we no longer insert -g).

  - Build-time warning for inverse video terminals and better instructions in
    status_screen.txt.

--------------
Version 0.62b:
--------------

  - Minor improvements to the allocator, as suggested by Tobias Ospelt.

  - Example instrumented memcmp() in experimental/instrumented_cmp.

  - Speculative fix for MacOS X (clang detection, again).

  - Typo fix for parallel_fuzzing.txt, as reported by Thomas Jarosch.

--------------
Version 0.61b:
--------------

  - A trivial fix for clang detection on systems with a clang cc wrapper,
    so that it doesn't get confused with GCC and receives the necessary
    -no-integrated-as flag.

  - Cosmetic doc and CPU load indicator improvements.

  - Improvements for crash removal (README.txt left behind, d'oh).

--------------
Version 0.60b: